Add support for case sensitive identifiers